--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: http://example.org/
+baseURL: https://intpyjl.github.io/yjlblog/
 languageCode: en-us
-title: My New Hugo Site
+title: IntP Blog
 theme: "PaperMod"
