--- a/config.yml
+++ b/config.yml
@@ -4,7 +4,8 @@ title: IntP Blog
 theme: "PaperMod"
 params:
     homeInfoParams:
-        Title: 
+        Title: Opp!
+        imageUrl: "https://imgtg.com/image/zDzsM"
         Content: "这个人很懒，什么都没留下"
     socialIcons: # optional
         - name: "github"
