--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,6 @@
 baseURL: https://intpyjl.github.io/yjlblog/
-# baseURL: https://www.sulvblog.cn  # 绑定的域名
 languageCode: zh-cn # en-us
-title: IntP 日记本
+title: IntP Blog
 theme: PaperMod # 主题名字，和themes文件夹下的一致
 
 enableInlineShortcodes: true
@@ -37,8 +36,8 @@ languages:
       weight: 1
       profileMode:
         enabled: true
-        title: (〃'▽'〃)
-        subtitle: "🧨学而时习之，不亦说乎？有朋自远方来，不亦乐乎？</br>👏🏼欢迎光临素履(Sulv)的博客</br>👇联系方式"
+        title: "这个人很懒，什么也没留下"
+        subtitle: "</br>……你怎么还不走</br>👇给我主播点个关注"
         imageUrl: "img/int.png"
         imageTitle: 
         imageWidth: 150
@@ -50,48 +49,34 @@ languages:
             url: posts/read
           - name: 🏖生活
             url: posts/life
-          # - name: 🌹素履的博客
-          #   url: https://www.xyming108.top
       menu:
         main:
-          - identifier: search
-            name: 🔍搜索
-            url: search
-            weight: 1
           - identifier: home
-            name: 🏠主页
+            name: 主页
             url: /
+            weight: 1
+          - identifier: search
+            name: 搜索
+            url: search
             weight: 2
           - identifier: posts
-            name: 📚文章
+            name: 文章
             url: posts
             weight: 3
-          # - identifier: tech
-          #   name: 👨🏻‍💻技术文章
-          #   url: posts/tech
-          #   weight: 5
-          # - identifier: life
-          #   name: 🏖记录生活
-          #   url: posts/life
-          #   weight: 6
           - identifier: archives
-            name: ⏱时间轴
+            name: 时间轴
             url: archives/
             weight: 20
-          # - identifier: categories
-          #   name: 🧩分类
-          #   url: categories
-          #   weight: 30
           - identifier: tags
-            name: 🔖标签
+            name: 标签
             url: tags
             weight: 40
           - identifier: about
-            name: 🙋🏻‍♂️关于
+            name: 关于
             url: about
             weight: 50
           - identifier: links
-            name: 🤝友链
+            name: 是什么呢
             url: links
             weight: 60
 
@@ -104,7 +89,7 @@ outputs:
 params:
     env: production # to enable google analytics, opengraph, twitter-cards and schema.
     # description: "这是一个纯粹的博客......"
-    author: Sulv
+    author: yjlintp
     # author: ["Me", "You"] # multiple authors
 
   
@@ -130,22 +115,12 @@ params:
     comments: true
     
     socialIcons:
+        - name: youtube
+          url: "https://www.youtube.com/channel/UCSFCh5NL4qXrAy9u-u2lX3g"
         - name: github
-          url: "https://github.com/xyming108"
-        - name: twitter
-          url:  "img/twitter.png"
-        - name: facebook
-          url: "https://www.facebook.com/profile.php?id=100027782410997"
-        - name: instagram
-          url: "img/instagram.png"
-        - name: QQ
-          url: "img/qq.png"
-        - name: WeChat
-          url: "img/wechat.png"
-        # - name: Phone
-        #   url: "img/phone.png"
+          url: "https://github.com/intpyjl"
         - name: email
-          url: "mailto:1931559710@qq.com"
+          url: "yjl.intp@gmail.com"
         - name: RSS
           url: "index.xml"
 
@@ -164,11 +139,11 @@ params:
     #         SiteVerificationTag: "XYZabc"
 
     assets:
-        favicon: "img/logo.gif"
-        favicon16x16: "img/logo.gif"
-        favicon32x32: "img/logo.gif"
-        apple_touch_icon: "logo.gif"
-        safari_pinned_tab: "logo.gif"
+        favicon: "img/int.png"
+        favicon16x16: "img/int.png"
+        favicon32x32: "img/int.png"
+        apple_touch_icon: "img/int.png"
+        safari_pinned_tab: "img/int.png"
 
     # cover:
     #     hidden: true # hide everywhere but not in structured data
@@ -188,7 +163,6 @@ params:
       version: 1.4.11
 
 taxonomies:
-    category: categories
     tag: tags
     series: series
 
@@ -204,13 +178,11 @@ markup:
         # noClasses: false
         # style: monokai
         style: darcula
-
-        # codeFences：代码围栏功能，这个功能一般都要设为 true 的，不然很难看，就是干巴巴的-代码文字，没有颜色。
-        # guessSyntax：猜测语法，这个功能建议设置为 true, 如果你没有设置要显示的语言则会自动匹配。
-        # hl_Lines：高亮的行号，一般这个不设置，因为每个代码块我们可能希望让高亮的地方不一样。
-        # lineNoStart：行号从编号几开始，一般从 1 开始。
+        codeFences: true
+        guessSyntax: true
+        lineNoStart: 1
         # lineNos：是否显示行号，我比较喜欢显示，所以我设置的为 true.
-        # lineNumbersInTable：使用表来格式化行号和代码,而不是 标签。这个属性一般设置为 true.
+        lineNumbersInTable: true
         # noClasses：使用 class 标签，而不是内嵌的内联样式
 
 privacy:
